--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "express-async-errors": "^3.1.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.0.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie": "^0.6.0",
     "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-serve-static-core": "^4.17.41",
     "@types/http-errors": "^2.0.4",
